--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
-				<li class=""><a href="index.html">Home</a></li>
+				<li class=""><a href="index.html">Beranda</a></li>
 				<li class="active"><a href="about.html">About Us</a></li>
 				<li class=""><a href="services.html">Services</a></li>
 				<li class=""><a href="packages.html">Packages</a></li>
