--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
 				<li class="active"><a href="index.html">Beranda</a></li>
-				<li class=""><a href="about.html">About Us</a></li>
+				<li class=""><a href="about.html">Tentang Kami</a></li>
 				<li class=""><a href="services.html">Services</a></li>
 				<li class=""><a href="packages.html">Packages</a></li>
 				<li class=""><a href="contact.html">Contact</a></li>
