--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<ul class="menu ml-auto mt-1">
 				<li class="active"><a href="index.html">Beranda</a></li>
 				<li class=""><a href="about.html">Tentang Kami</a></li>
-				<li class=""><a href="services.html">Services</a></li>
-				<li class=""><a href="packages.html">Packages</a></li>
-				<li class=""><a href="contact.html">Contact</a></li>
+				<li class=""><a href="services.html">Galeri</a></li>
+				<li class=""><a href="packages.html">Paket</a></li>
+				<li class=""><a href="contact.html">Kontak</a></li>
 				<li class="booking"><a href="booking.html">Book Now</a></li>
 			</ul>
 		</nav>
